Other java17 changes